# pupil-client

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  conanfile.txt  gaze_receiver.py  mock_pupil_network_api.py  pupil_example.py  requirements.txt
src/: main.cpp  pupil_data_formats.cpp  pupil_data_formats.h
